--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -200,7 +200,7 @@
     <!-- Header -->
     <header>
         <div class="banner-container">
-            <img src="../../images/banner26.png" alt="Econ Words Banner" class="banner-image">
+            <img src="../../images/banner26.png" alt="Econ Words Banner" class="banner-image" id="game-banner">
             <div class="banner-overlay">
                 <div class="container">
                     <div class="nav-links">
@@ -264,20 +264,12 @@
                         <h6 class="mt-4 mb-3">High Scores by Category</h6>
                         <div class="list-group">
                             <div class="list-group-item d-flex justify-content-between align-items-center">
-                                Concepts
-                                <span class="badge badge-primary badge-pill" id="high-score-concept">0</span>
+                                Economics Terms
+                                <span class="badge badge-primary badge-pill" id="high-score-econ">0</span>
                             </div>
                             <div class="list-group-item d-flex justify-content-between align-items-center">
-                                Terms
-                                <span class="badge badge-primary badge-pill" id="high-score-term">0</span>
-                            </div>
-                            <div class="list-group-item d-flex justify-content-between align-items-center">
-                                Policies
-                                <span class="badge badge-primary badge-pill" id="high-score-policy">0</span>
-                            </div>
-                            <div class="list-group-item d-flex justify-content-between align-items-center">
-                                Variables
-                                <span class="badge badge-primary badge-pill" id="high-score-variable">0</span>
+                                Mathematical Economics
+                                <span class="badge badge-primary badge-pill" id="high-score-math">0</span>
                             </div>
                         </div>
 
@@ -336,9 +328,27 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-    <!-- Game Scripts -->
+    <!-- Game Scripts - Order matters for variable definitions -->
     <script src="js/terms-data.js"></script>
+    <script src="js/math-terms.js"></script>
+    <script src="js/advanced-math-terms.js"></script>
     <script src="js/game-logic.js"></script>
     <script src="js/game-ui.js"></script>
+
+    <script>
+        // Make math terms functions available globally
+        if (typeof getAllMathTerms !== 'undefined') {
+            window.getAllMathTerms = getAllMathTerms;
+            window.getRandomMathTerm = getRandomMathTerm;
+            window.getDailyMathTerm = getDailyMathTerm;
+        }
+
+        // Make advanced math terms functions available globally
+        if (typeof getAllAdvancedMathTerms !== 'undefined') {
+            window.getAllAdvancedMathTerms = getAllAdvancedMathTerms;
+            window.getRandomAdvancedMathTerm = getRandomAdvancedMathTerm;
+            window.getDailyAdvancedMathTerm = getDailyAdvancedMathTerm;
+        }
+    </script>
 </body>
 </html>
