--- a/activities/econ-words/index.html
+++ b/activities/econ-words/index.html
@@ -139,7 +139,7 @@
     <!-- Header -->
     <header>
         <div class="banner-container">
-            <img src="../../images/banner25.png" alt="Econ Words Banner" class="banner-image">
+            <img src="../../images/banner27.png" alt="Econ Words Banner" class="banner-image">
             <div class="banner-overlay">
                 <div class="container">
                     <div class="nav-links">
@@ -196,45 +196,42 @@
         <div class="row mb-4">
             <div class="col-md-6 mb-4">
                 <div class="card game-card h-100">
-                    <img src="../../images/banner24.png" class="card-img-top game-image" alt="Economic Concepts">
+                    <img src="../../images/banner25.png" class="card-img-top game-image" alt="Economics Terms">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Economic Concepts</h5>
-                        <p class="card-text">Guess economic concepts from their definitions. These are fundamental ideas in economics.</p>
-                        <a href="game.html?type=concept" class="btn btn-primary">Random Concept</a>
-                        <a href="game.html?type=concept&daily=true" class="btn btn-outline-primary ml-2">Daily Concept</a>
+                        <h5 class="card-title">Economics Terms</h5>
+                        <p class="card-text">Test your knowledge of economic concepts, terms, policies, and variables from your textbook.</p>
+                        <div class="mt-3">
+                            <a href="game.html?type=econ" class="btn btn-primary">Random Term</a>
+                            <a href="game.html?type=econ&daily=true" class="btn btn-outline-primary ml-2">Daily Term</a>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-light">Includes concepts, terms, policies, and variables</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="card game-card h-100">
-                    <img src="../../images/banner25.png" class="card-img-top game-image" alt="Economic Terms">
+                    <img src="../../images/banner28.png" class="card-img-top game-image" alt="Mathematical Economics">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Economic Terms</h5>
-                        <p class="card-text">Test your knowledge of economic terms and acronyms used in your textbook.</p>
-                        <a href="game.html?type=term" class="btn btn-primary">Random Term</a>
-                        <a href="game.html?type=term&daily=true" class="btn btn-outline-primary ml-2">Daily Term</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="card game-card h-100">
-                    <img src="../../images/banner26.png" class="card-img-top game-image" alt="Policy Terms">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Policy Terms</h5>
-                        <p class="card-text">Challenge yourself with economic policy terms from fiscal and monetary policy.</p>
-                        <a href="game.html?type=policy" class="btn btn-primary">Random Policy</a>
-                        <a href="game.html?type=policy&daily=true" class="btn btn-outline-primary ml-2">Daily Policy</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="card game-card h-100">
-                    <img src="../../images/banner24.png" class="card-img-top game-image" alt="Economic Variables">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Economic Variables</h5>
-                        <p class="card-text">Identify economic variables that economists measure and analyze.</p>
-                        <a href="game.html?type=variable" class="btn btn-primary">Random Variable</a>
-                        <a href="game.html?type=variable&daily=true" class="btn btn-outline-primary ml-2">Daily Variable</a>
+                        <h5 class="card-title">Mathematical Economics</h5>
+                        <p class="card-text">Challenge yourself with mathematical concepts, formulas, and variables used in economics.</p>
+                        <div class="mt-3">
+                            <a href="game.html?type=math" class="btn btn-primary">Random Formula</a>
+                            <a href="game.html?type=math&daily=true" class="btn btn-outline-primary ml-2">Daily Formula</a>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-light">Includes formulas and mathematical concepts</span>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-warning">Difficulty increases with your streak!</span>
+                        </div>
+                        <div class="mt-3">
+                            <a href="math-game.html" class="btn btn-danger">Try Numerical Problems</a>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-light">Solve actual economic calculations!</span>
+                        </div>
                     </div>
                 </div>
             </div>
