--- a/activities/econ-words/index.html
+++ b/activities/econ-words/index.html
@@ -227,10 +227,22 @@
                             <span class="badge badge-warning">Difficulty increases with your streak!</span>
                         </div>
                         <div class="mt-3">
-                            <a href="math-game.html" class="btn btn-danger">Try Numerical Problems</a>
+                            <a href="math-game.html" class="btn btn-danger">Try Math Problems</a>
                         </div>
                         <div class="mt-2">
-                            <span class="badge badge-light">Solve actual economic calculations!</span>
+                            <span class="badge badge-light">Randomly generated problems every time!</span>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-warning">GDP, CPI, Unemployment, and more!</span>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-info">NEW: Wordle-style digit guessing!</span>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-danger">CHALLENGE MODE: Hidden parameters!</span>
+                        </div>
+                        <div class="mt-2">
+                            <span class="badge badge-success">UNIQUE: Different values for each student!</span>
                         </div>
                     </div>
                 </div>
