--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -289,7 +289,7 @@
             <div class="class-info-bar d-flex justify-content-between align-items-center">
                 <div>
                     <h5 class="mb-0">Section: <span id="section-info">Monday 2:00pm - 2:50pm</span></h5>
-                    <p class="mb-0" id="ta-name-container">TA: <span id="ta-name">Akshay</span></p>
+                    <p class="mb-0" id="ta-name-container">TA: <span id="ta-name">Akshay</span> <a href="ta-controls.html" id="ta-page-link" class="btn btn-sm btn-outline-info ml-2" style="display: none;"><i class="fas fa-chalkboard-teacher mr-1"></i>View TA Page</a></p>
                 </div>
                 <div class="text-right">
                     <h5 class="mb-0">Round: <span id="round-number">0</span> / <span id="max-rounds">20</span></h5>
