--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -236,7 +236,7 @@
                                     <i class="fas fa-user"></i>
                                 </div>
                                 <span class="user-name" id="user-name-display">Guest</span>
-                                <button class="sign-out-btn" id="sign-out-btn">Sign Out</button>
+                                <button class="sign-out-btn logout-button" id="sign-out-btn">Sign Out</button>
                             </div>
 
                             <!-- Sign in link (shown when not logged in) -->
@@ -768,5 +768,8 @@
     <script src="js/game-ui.js?v=13"></script>
     <script src="js/game-trading.js?v=13"></script>
     <script src="js/class-game.js?v=7"></script>
+
+    <!-- Logout Script -->
+    <script src="js/logout.js?v=1"></script>
 </body>
 </html>
