--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -180,6 +180,22 @@
             margin-top: 10px;
         }
 
+        /* Loading message */
+        .loading-message {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+            z-index: 9999;
+        }
+
         /* Responsive adjustments */
         @media (max-width: 576px) {
             .game-cell {
@@ -267,10 +283,6 @@
                                 Economics Terms
                                 <span class="badge badge-primary badge-pill" id="high-score-econ">0</span>
                             </div>
-                            <div class="list-group-item d-flex justify-content-between align-items-center">
-                                Mathematical Economics
-                                <span class="badge badge-primary badge-pill" id="high-score-math">0</span>
-                            </div>
                         </div>
 
                         <div class="mt-4">
@@ -328,27 +340,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-    <!-- Game Scripts - Order matters for variable definitions -->
-    <script src="js/terms-data.js"></script>
-    <script src="js/math-terms.js"></script>
-    <script src="js/advanced-math-terms.js"></script>
-    <script src="js/game-logic.js"></script>
-    <script src="js/game-ui.js"></script>
-
-    <script>
-        // Make math terms functions available globally
-        if (typeof getAllMathTerms !== 'undefined') {
-            window.getAllMathTerms = getAllMathTerms;
-            window.getRandomMathTerm = getRandomMathTerm;
-            window.getDailyMathTerm = getDailyMathTerm;
-        }
-
-        // Make advanced math terms functions available globally
-        if (typeof getAllAdvancedMathTerms !== 'undefined') {
-            window.getAllAdvancedMathTerms = getAllAdvancedMathTerms;
-            window.getRandomAdvancedMathTerm = getRandomAdvancedMathTerm;
-            window.getDailyAdvancedMathTerm = getDailyAdvancedMathTerm;
-        }
-    </script>
+    <!-- Game Scripts - Using ES modules -->
+    <script type="module" src="js/game-logic.js"></script>
+    <script type="module" src="js/game-ui.js"></script>
 </body>
 </html>
