--- a/activities/econ-words/index.html
+++ b/activities/econ-words/index.html
@@ -194,55 +194,18 @@
         </div>
 
         <div class="row mb-4">
-            <div class="col-md-6 mb-4">
+            <div class="col-md-8 mx-auto mb-4">
                 <div class="card game-card h-100">
                     <img src="../../images/banner25.png" class="card-img-top game-image" alt="Economics Terms">
                     <div class="card-body text-center">
                         <h5 class="card-title">Economics Terms</h5>
-                        <p class="card-text">Test your knowledge of economic concepts, terms, policies, and variables from your textbook.</p>
+                        <p class="card-text">Test your knowledge of economic concepts, terms, policies, and variables.</p>
                         <div class="mt-3">
                             <a href="game.html?type=econ" class="btn btn-primary">Random Term</a>
                             <a href="game.html?type=econ&daily=true" class="btn btn-outline-primary ml-2">Daily Term</a>
                         </div>
                         <div class="mt-2">
-                            <span class="badge badge-light">Includes concepts, terms, policies, and variables</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 mb-4">
-                <div class="card game-card h-100">
-                    <img src="../../images/banner28.png" class="card-img-top game-image" alt="Mathematical Economics">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Mathematical Economics</h5>
-                        <p class="card-text">Challenge yourself with mathematical concepts, formulas, and variables used in economics.</p>
-                        <div class="mt-3">
-                            <a href="game.html?type=math" class="btn btn-primary">Random Formula</a>
-                            <a href="game.html?type=math&daily=true" class="btn btn-outline-primary ml-2">Daily Formula</a>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-light">Includes formulas and mathematical concepts</span>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-warning">Difficulty increases with your streak!</span>
-                        </div>
-                        <div class="mt-3">
-                            <a href="math-game.html" class="btn btn-danger">Try Math Problems</a>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-light">Randomly generated problems every time!</span>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-warning">GDP, CPI, Unemployment, and more!</span>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-info">NEW: Wordle-style digit guessing!</span>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-danger">CHALLENGE MODE: Hidden parameters!</span>
-                        </div>
-                        <div class="mt-2">
-                            <span class="badge badge-success">UNIQUE: Different values for each student!</span>
+                            <span class="badge badge-light">Includes important economic terms and concepts</span>
                         </div>
                     </div>
                 </div>
